# claude-harness-sdk

./: .gitignore  README.md  Result.md  config.yaml  pyproject.toml
briefs/: example-todo-cli.md  my-app.md
prompts/: evaluator.md  generator.md  planner.md
scripts/: sdk_probe.py
src/harness/: agents.py  cli.py  config.py  orchestrator.py
src/hermes/: agents.py  cli.py  config.py  io.py  orchestrator.py
